k8s.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-api-deployment
  labels:
    app: hello-world-api
spec:
  selector:
    matchLabels:
      app: hello-world-api
  template:
    metadata:
      labels:
        app: hello-world-api
    spec:
      containers:
      - name: hello-world-api
        image: localhost:32000/hello-world-api:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
