k8s.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-api-service
spec:
  selector:
    app: hello-world-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
