k8s.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: default
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      - path: /hello-world-api
        pathType: Prefix
        backend:
          service:
            name: hello-world-api-service
            port:
              number: 80
